home-cluster/auth/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-dashboard
  namespace: auth
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dashboard.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    secretName: wildcard-stevearnett-com-tls
